# vocabaqdata

./: .gitignore  .gitmodules  Dockerfile  README.md  check_snakefile.sh  pyproject.toml
.github/workflows/: docker-publish.yml
vocabaqdata/: datasets.tsv  import_tools.py
vocabaqdata/feats/: freq.py
vocabaqdata/importers/: blp.py  dcp.py  dlp.py  dlp2.py  ecp.py  ehara_svl12k.py  elp.py  evkd1.py  evkd1_test_answers.py  evkd1_test_questions.py  flp.py  flp_decisions.py  flp_words.py  spalex.py  testyourvocab_key.py  testyourvocab_native.py  testyourvocab_nonnative.py  testyourvocab_nonnative.sh  wordbank.py
vocabaqdata/meta/: parse_megastudies.py  update_table.py
vocabaqdata/proc/: add_zipfs.py  clean_svl12k.py  enrich_svl12k.py  extract_wordlist_from_resps.py  lexdecis_to_inventory.py  project_freqlist.py
workflow/: Snakefile  Snakemake
workflow/datasets/: blp.smk  dcp.smk  dlp.smk  dlp2.smk  ecp.smk  elp.smk  evkd1.smk  flp.smk  spalex.smk  svl12k.smk  testyourvocab.smk  wordbank.smk
workflow/scripts/: download_zips.py  enrich.py  extract_zips.py
