[tool.poetry]
name = "vocabaqdata"
version = "0.1.0"
description = "pPeparation of various datasets relevant to modelling vocabulary with an eye towards modelling receptive vocabulary inventories"
authors = ["Frankie Robertson <frankie@robertson.name>"]
license = "Apache-v2"

[tool.poetry.dependencies]
python = "^3.8"
wordfreq = "^2.5.0"
snakemake = "^6.5.1"
click = "^8.0.1"
tabulate = "^0.8.9"
pandas = "^1.2.5"
pyarrow = "^4.0.1"
SQLAlchemy = "^1.4.20"
duckdb = "^0.3.1"
mysqlclient = "^2.0.3"
more-itertools = "^8.8.0"
xlrd = "^2.0.1"
html5lib = "^1.1"
lxml = "^4.6.4"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
